--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.clientecontentprovider">
 
+    <uses-permission android:name="net.ivanvega.basededatoslocalconrooma.provider.READ"/>
+    <uses-permission android:name="net.ivanvega.basededatoslocalconrooma.provider.WRITE"/>
+
     <queries >
 
         <provider
